[gd_scene load_steps=43 format=3 uid="uid://hi83svv8nqma"]

[ext_resource type="Texture2D" uid="uid://6jwnvsv830dw" path="res://graphics/enemies/bug/attack/00010.png" id="1_44fnj"]
[ext_resource type="Script" path="res://scenes/enemies/bug.gd" id="1_kxv6f"]
[ext_resource type="Texture2D" uid="uid://ci6yuuwilyrbf" path="res://graphics/enemies/bug/attack/00011.png" id="2_aasxx"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_yxpow"]
[ext_resource type="Texture2D" uid="uid://cotww073ysdv1" path="res://graphics/enemies/bug/attack/00012.png" id="3_3qvol"]
[ext_resource type="Texture2D" uid="uid://vna4hnfr41hb" path="res://graphics/enemies/bug/attack/00013.png" id="4_xtak7"]
[ext_resource type="Texture2D" uid="uid://cp7nu0tywok4h" path="res://graphics/enemies/bug/attack/00014.png" id="5_eyt67"]
[ext_resource type="Texture2D" uid="uid://jsndhnptaie3" path="res://graphics/enemies/bug/attack/00015.png" id="6_r7kye"]
[ext_resource type="Texture2D" uid="uid://tfnya6wvq3eg" path="res://graphics/enemies/bug/attack/00016.png" id="7_w42c0"]
[ext_resource type="Texture2D" uid="uid://drbpisga6dbo4" path="res://graphics/enemies/bug/attack/00017.png" id="8_47n4h"]
[ext_resource type="Texture2D" uid="uid://bo8am0uvbphbl" path="res://graphics/enemies/bug/attack/00018.png" id="9_kcrlr"]
[ext_resource type="Texture2D" uid="uid://dq5spovkp23sy" path="res://graphics/enemies/bug/attack/00019.png" id="10_oqxv4"]
[ext_resource type="Texture2D" uid="uid://bkauxh03i5vsn" path="res://graphics/enemies/bug/attack/00020.png" id="11_hnf02"]
[ext_resource type="Texture2D" uid="uid://bwn7305mdt8w0" path="res://graphics/enemies/bug/attack/00021.png" id="12_gd60c"]
[ext_resource type="Texture2D" uid="uid://djx3pnul1b2iw" path="res://graphics/enemies/bug/attack/00022.png" id="13_vl2yj"]
[ext_resource type="Texture2D" uid="uid://dnbpo6wb3yu15" path="res://graphics/enemies/bug/attack/00023.png" id="14_g4nww"]
[ext_resource type="Texture2D" uid="uid://dbtxnyvvs5f1l" path="res://graphics/enemies/bug/attack/00024.png" id="15_muwak"]
[ext_resource type="Texture2D" uid="uid://w3qkoqtxs71" path="res://graphics/enemies/bug/attack/00025.png" id="16_wykuv"]
[ext_resource type="Texture2D" uid="uid://cbqhg7yjjnl4m" path="res://graphics/enemies/bug/attack/00026.png" id="17_cfyai"]
[ext_resource type="Texture2D" uid="uid://b2nm0gey81kro" path="res://graphics/enemies/bug/attack/00027.png" id="18_sh0gd"]
[ext_resource type="Texture2D" uid="uid://t5tgaihpwjuu" path="res://graphics/enemies/bug/attack/00028.png" id="19_46pr6"]
[ext_resource type="Texture2D" uid="uid://cenn7emsu4ynl" path="res://graphics/enemies/bug/attack/00029.png" id="20_q5y8h"]
[ext_resource type="Texture2D" uid="uid://ehjqcl1m1wrh" path="res://graphics/enemies/bug/attack/00030.png" id="21_od8wy"]
[ext_resource type="Texture2D" uid="uid://b5ef3d35qswe" path="res://graphics/enemies/bug/walk/00000.png" id="22_ofd4u"]
[ext_resource type="Texture2D" uid="uid://dp2i2bvg41yid" path="res://graphics/enemies/bug/walk/00001.png" id="23_mgxxg"]
[ext_resource type="Texture2D" uid="uid://b8rvhpdmd6y16" path="res://graphics/enemies/bug/walk/00002.png" id="24_fovrh"]
[ext_resource type="Texture2D" uid="uid://dmci5lmae2lhn" path="res://graphics/enemies/bug/walk/00003.png" id="25_otk24"]
[ext_resource type="Texture2D" uid="uid://ctvb6p415ssnx" path="res://graphics/enemies/bug/walk/00004.png" id="26_wn4ks"]
[ext_resource type="Texture2D" uid="uid://miis3rcc45ef" path="res://graphics/enemies/bug/walk/00005.png" id="27_54mkr"]
[ext_resource type="Texture2D" uid="uid://jnegolyvqlo3" path="res://graphics/enemies/bug/walk/00006.png" id="28_ii8ni"]
[ext_resource type="Texture2D" uid="uid://chnt1yedh8jyr" path="res://graphics/enemies/bug/walk/00007.png" id="29_i6yfo"]
[ext_resource type="Texture2D" uid="uid://bi273jsxq3f7h" path="res://graphics/enemies/bug/walk/00008.png" id="30_djy5l"]
[ext_resource type="Texture2D" uid="uid://bnd53ot2obwjv" path="res://graphics/explosions/grunge.png" id="33_uap0a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wvehm"]
shader = ExtResource("2_yxpow")
shader_parameter/s_color = Color(1, 1, 1, 1)
shader_parameter/progress = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_pdck1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_44fnj")
}, {
"duration": 1.0,
"texture": ExtResource("2_aasxx")
}, {
"duration": 1.0,
"texture": ExtResource("3_3qvol")
}, {
"duration": 1.0,
"texture": ExtResource("4_xtak7")
}, {
"duration": 1.0,
"texture": ExtResource("5_eyt67")
}, {
"duration": 1.0,
"texture": ExtResource("6_r7kye")
}, {
"duration": 1.0,
"texture": ExtResource("7_w42c0")
}, {
"duration": 1.0,
"texture": ExtResource("8_47n4h")
}, {
"duration": 1.0,
"texture": ExtResource("9_kcrlr")
}, {
"duration": 1.0,
"texture": ExtResource("10_oqxv4")
}, {
"duration": 1.0,
"texture": ExtResource("11_hnf02")
}, {
"duration": 1.0,
"texture": ExtResource("12_gd60c")
}, {
"duration": 1.0,
"texture": ExtResource("13_vl2yj")
}, {
"duration": 1.0,
"texture": ExtResource("14_g4nww")
}, {
"duration": 1.0,
"texture": ExtResource("15_muwak")
}, {
"duration": 1.0,
"texture": ExtResource("16_wykuv")
}, {
"duration": 1.0,
"texture": ExtResource("17_cfyai")
}, {
"duration": 1.0,
"texture": ExtResource("18_sh0gd")
}, {
"duration": 1.0,
"texture": ExtResource("19_46pr6")
}, {
"duration": 1.0,
"texture": ExtResource("20_q5y8h")
}, {
"duration": 1.0,
"texture": ExtResource("21_od8wy")
}],
"loop": false,
"name": &"Attack",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_ofd4u")
}, {
"duration": 1.0,
"texture": ExtResource("23_mgxxg")
}, {
"duration": 1.0,
"texture": ExtResource("24_fovrh")
}, {
"duration": 1.0,
"texture": ExtResource("25_otk24")
}, {
"duration": 1.0,
"texture": ExtResource("26_wn4ks")
}, {
"duration": 1.0,
"texture": ExtResource("27_54mkr")
}, {
"duration": 1.0,
"texture": ExtResource("28_ii8ni")
}, {
"duration": 1.0,
"texture": ExtResource("29_i6yfo")
}, {
"duration": 1.0,
"texture": ExtResource("30_djy5l")
}],
"loop": true,
"name": &"Walk",
"speed": 24.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_k2ni5"]
radius = 55.3173

[sub_resource type="CircleShape2D" id="CircleShape2D_jqq7b"]
radius = 335.006

[sub_resource type="CircleShape2D" id="CircleShape2D_rmmyi"]
radius = 234.361

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_62cl7"]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_3p80h"]
_data = [Vector2(1e-05, 1), 0.0, 0.0, 0, 0, Vector2(0.995781, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_j3wu6"]
curve = SubResource("Curve_3p80h")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_asied"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 36.31
radial_velocity_min = 52.66
radial_velocity_max = 245.64
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.4
scale_curve = SubResource("CurveTexture_j3wu6")
anim_offset_max = 1.0

[node name="Bug" type="CharacterBody2D" groups=["Entity"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_kxv6f")

[node name="SpriteAnimation" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_wvehm")
rotation = 1.5708
scale = Vector2(0.05, 0.05)
sprite_frames = SubResource("SpriteFrames_pdck1")
animation = &"Attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_k2ni5")

[node name="NoticeArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea2D"]
shape = SubResource("CircleShape2D_jqq7b")
debug_color = Color(0.754932, 0.39955, 0.583338, 0.42)

[node name="AttackArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2D"]
shape = SubResource("CircleShape2D_rmmyi")

[node name="Timers" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="Particles" type="Node2D" parent="."]

[node name="HitParticles" type="GPUParticles2D" parent="Particles"]
modulate = Color(0.227558, 0.117086, 0.10996, 1)
material = SubResource("CanvasItemMaterial_62cl7")
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_asied")
texture = ExtResource("33_uap0a")
lifetime = 0.5
one_shot = true

[node name="DeathParticles" type="GPUParticles2D" parent="Particles"]

[connection signal="animation_finished" from="SpriteAnimation" to="." method="_on_sprite_animation_animation_finished"]
[connection signal="body_entered" from="NoticeArea2D" to="." method="_on_notice_area_2d_body_entered"]
[connection signal="body_exited" from="NoticeArea2D" to="." method="_on_notice_area_2d_body_exited"]
[connection signal="body_entered" from="AttackArea2D" to="." method="_on_attack_area_2d_body_entered"]
[connection signal="body_exited" from="AttackArea2D" to="." method="_on_attack_area_2d_body_exited"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_hit_timer_timeout"]
